Tag Dialog - fixing the label to be consistent across Cloud and OnPrem (Global and Personal tags) Description Section - new expand and collapse button and aligned vertical center with border line.

--- a/trunk/ssf/web/docroot/css/mashup_dark.css
+++ b/trunk/ssf/web/docroot/css/mashup_dark.css
@@ -1,10 +1,5 @@
 /* Mashup styles, used on landing pages */
 
-#descriptionRegion1 .ss_entryDescription {
-	background: #949494;
-	color: #f6f6f6;
-	}
-
 .ss_mashup {
 }
 
